<resources>
    <string name="app_name">Vocab Builder</string>
    <string name="dictionary">Dictionary</string>
    <string name="memorize">Memorize</string>
    <string name="quiz">Quiz</string>
    <string name="add">Add</string>
    <string name="word">Word</string>
    <string name="definition">Definition</string>
    <string name="sentence">Sentence</string>
    <string name="synonyms">Synonyms</string>
    <string name="antonyms">Antonyms</string>

    <string-array name="categories">
        <item>Choose Categories</item>
        <item>Verbs</item>
        <item>Adverbs</item>
        <item>Adjectives</item>
        <item>Phrases and Idioms</item>
    </string-array>

    <string name="first_time">first_time</string>
    <string name="remind">remind</string>
    <string name="word_notification_channel_id" translatable="false">word_channel</string>
    <string name="notification_title">Word Reminder</string>
    <string name="notification_text">Memorize the words</string>
    <string name="remind_me">Remind me</string>
    <string name="cancel_reminder">Cancel reminder</string>
    <string name="image">image</string>
    <string name="submit">SUBMIT</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="name">Name</string>
    <string name="please_choose_quiz_categories">Please choose quiz categories.</string>
    <string name="please_select_the_number_of_the_quiz_questions">Please select the number of the quiz questions</string>
    <string name="start">Start</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="finish">FINISH</string>
    <string name="go_to_next_question">GO TO NEXT QUESTION</string>
    <string name="word_quiz_result">Word Quiz Result</string>
</resources>